--- a/DESKTOPV2/funcionario/funcionarios-funcionario.html
+++ b/DESKTOPV2/funcionario/funcionarios-funcionario.html
@@ -637,13 +637,14 @@
       <form id="tokenForm" onsubmit="generateAndCopyToken(event)">
         <div class="form-group">
           <label for="tokenDuration" class="form-label">Duração do Link</label>
-          <select id="tokenDuration" class="form-select" required>
+          <select id="tokenDuration" class="form-select" onchange="updateDurationInfo()" required>
             <option value="24">24 horas</option>
             <option value="48">48 horas</option>
             <option value="72">72 horas</option>
             <option value="168">1 semana</option>
+            <option value="permanent">🔓 Link Permanente</option>
           </select>
-          <p class="form-info">O link expirará após o tempo selecionado</p>
+          <p class="form-info" id="durationInfo">O link expirará após o tempo selecionado</p>
         </div>
         <div class="form-group" id="linkResult" style="display: none;">
           <label class="form-label">Link de Acesso</label>
@@ -774,13 +775,64 @@
 
     // COPY LAVADOR LINK
     let currentLavadorId = null;
+    let tokenExistenteAtivo = null;
 
     function copyLavadorLink(lavadorId, lavadorNome) {
       currentLavadorId = lavadorId;
-      document.getElementById('tokenModalTitle').textContent = `Gerar Link - ${lavadorNome}`;
+      tokenExistenteAtivo = null;
+      document.getElementById('tokenModalTitle').textContent = `Link de Acesso - ${lavadorNome}`;
       document.getElementById('linkResult').style.display = 'none';
       document.getElementById('submitTokenBtn').style.display = 'inline-block';
+      document.getElementById('tokenDuration').value = '24';
+      updateDurationInfo();
+
+      // Carregar tokens existentes
+      loadExistingTokens(lavadorId);
+
       document.getElementById('tokenModal').style.display = 'flex';
+    }
+
+    async function loadExistingTokens(lavadorId) {
+      try {
+        // Buscar tokens do lavador
+        const response = await window.api.getLavadores();
+        const lavadores = response.lavadores || [];
+        const lavador = lavadores.find(l => l.id === lavadorId);
+
+        if (lavador && lavador.tokens && lavador.tokens.length > 0) {
+          // Procurar um token ativo
+          const tokenAtivo = lavador.tokens.find(t => t.ativo === true);
+          if (tokenAtivo) {
+            tokenExistenteAtivo = tokenAtivo;
+            const link = `${window.location.origin}/lavador-publico.html?token=${tokenAtivo.token}`;
+            document.getElementById('linkText').textContent = link;
+            document.getElementById('linkResult').style.display = 'block';
+            document.getElementById('submitTokenBtn').style.display = 'none';
+
+            let expiraMsg = '';
+            if (tokenAtivo.expiraEm === null) {
+              expiraMsg = ' (Link permanente - nunca expira)';
+            } else {
+              const expiryDate = new Date(tokenAtivo.expiraEm);
+              expiraMsg = ` (Expira em ${expiryDate.toLocaleDateString('pt-BR')})`;
+            }
+            document.getElementById('durationInfo').textContent = `Link ativo${expiraMsg}. Gere um novo para substituir.`;
+          }
+        }
+      } catch (error) {
+        console.error('Erro ao carregar tokens existentes:', error);
+      }
+    }
+
+    function updateDurationInfo() {
+      const duration = document.getElementById('tokenDuration').value;
+      const info = document.getElementById('durationInfo');
+
+      if (duration === 'permanent') {
+        info.innerHTML = '⚠️ Links permanentes nunca expiram. Use com cuidado.';
+      } else {
+        info.textContent = `O link expirará após ${duration} horas.`;
+      }
     }
 
     function closeTokenModal() {
@@ -812,7 +864,22 @@
         document.getElementById('linkResult').style.display = 'block';
         document.getElementById('submitTokenBtn').style.display = 'none';
 
-        showToast('Link gerado com sucesso!', 'success');
+        // Copiar automaticamente para área de transferência
+        try {
+          await navigator.clipboard.writeText(link);
+        } catch (err) {
+          console.warn('Erro ao copiar automaticamente:', err);
+        }
+
+        // Mostrar mensagem com informação sobre expiração
+        let expiraMsg = '';
+        if (duration === 'permanent') {
+          expiraMsg = ' (Link permanente - nunca expira)';
+        } else {
+          expiraMsg = ` (Válido por ${duration}h)`;
+        }
+
+        showToast('Link gerado e copiado com sucesso!' + expiraMsg, 'success');
 
       } catch (error) {
         console.error('Erro ao gerar token:', error);
