--- a/DESKTOPV2/index-funcionario.html
+++ b/DESKTOPV2/index-funcionario.html
@@ -50,39 +50,50 @@
     .header-left {
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 16px;
       flex: 1;
     }
 
     .logo {
-      width: 40px;
-      height: 40px;
-      border-radius: 8px;
-      background: var(--primary-color);
+      width: 48px;
+      height: 48px;
+      border-radius: 10px;
+      background: linear-gradient(135deg, var(--primary-color), #0052a3);
       display: flex;
       align-items: center;
       justify-content: center;
       color: white;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 24px;
+      flex-shrink: 0;
+      box-shadow: 0 2px 8px rgba(0, 102, 204, 0.3);
+    }
+
+    .empresa-info {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
     }
 
     .empresa-info h1 {
-      font-size: 16px;
-      font-weight: 600;
+      font-size: 18px;
+      font-weight: 700;
       color: var(--text-primary);
       margin: 0;
+      letter-spacing: -0.3px;
     }
 
     .empresa-info p {
-      font-size: 12px;
+      font-size: 13px;
       color: var(--text-secondary);
       margin: 0;
+      font-weight: 500;
     }
 
     .header-right {
       display: flex;
-      gap: 8px;
+      gap: 12px;
+      align-items: center;
     }
 
     .icon-btn {
@@ -94,12 +105,18 @@
       padding: 8px 12px;
       border-radius: 6px;
       transition: all 0.3s;
-      display: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .icon-btn:hover {
       background: var(--secondary-color);
       color: var(--primary-color);
+    }
+
+    .icon-btn:active {
+      transform: scale(0.95);
     }
 
     /* ===== MAIN CONTENT ===== */
@@ -431,10 +448,6 @@
         padding: 12px 16px;
       }
 
-      .icon-btn {
-        display: block;
-      }
-
       .main-container {
         padding: 16px;
         padding-bottom: 100px;
@@ -518,13 +531,21 @@
       }
 
       .header-left {
-        gap: 8px;
+        gap: 12px;
       }
 
       .logo {
-        width: 36px;
-        height: 36px;
-        font-size: 18px;
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+      }
+
+      .empresa-info h1 {
+        font-size: 16px;
+      }
+
+      .empresa-info p {
+        font-size: 12px;
       }
 
       .permission-cards {
@@ -821,11 +842,30 @@
 
     // ===== LOAD USER DATA =====
     function loadUserData() {
-      const usuarioNome = localStorage.getItem('usuarioNome');
-      const empresaNome = localStorage.getItem('empresaNome');
+      const usuarioNome = localStorage.getItem('usuarioNome') || 'Usuário';
+      let empresaNome = localStorage.getItem('empresaNome');
 
-      document.getElementById('usuarioNome').textContent = usuarioNome || 'Usuário';
-      document.getElementById('empresaNome').textContent = empresaNome || 'Empresa';
+      // Se não tiver empresa no localStorage, tentar buscar do token ou usar padrão
+      if (!empresaNome) {
+        // Tentar extrair do token ou usar valor padrão
+        empresaNome = 'Minha Empresa';
+      }
+
+      // Atualizar elementos
+      const usuarioEl = document.getElementById('usuarioNome');
+      const empresaEl = document.getElementById('empresaNome');
+
+      if (empresaEl) {
+        empresaEl.textContent = empresaNome;
+        empresaEl.title = empresaNome; // Adicionar tooltip
+      }
+
+      if (usuarioEl) {
+        usuarioEl.textContent = usuarioNome;
+        usuarioEl.title = usuarioNome; // Adicionar tooltip
+      }
+
+      console.log('Dados carregados - Empresa:', empresaNome, 'Usuário:', usuarioNome);
     }
 
     // ===== RENDER PERMISSION CARDS =====
